[package]
name = "web-thread-pool"
version = "0.1.0"
edition = "2024"
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
append-only-vec = "0.1.8"
async-lock = "3.4.1"
flume = "0.12.0"
futures = "0.3.31"
pin-project-lite = "0.2.16"

[dependencies.web-thread-select]
workspace = true

